# rust-sudoku

./: Cargo.toml  try_animal_symbols.html
benches/: build_benchmark.rs
src/: builder_1.rs  builder_fixed_size.rs  builder_obj.rs  builder_obj_log.rs  builder_vec.rs  builder_vec_large.rs  builder_vec_log.rs  lib.rs  main.rs  sandwich.rs  text_grid.rs
src/grid_constraint/: builder.rs  grid.rs  grid_constraint_before_split.rs  mod.rs
src/grid_constraint_solve/: builder.rs  grid.rs  mod.rs  solver.rs
