[package]
name = "sudoku"
version = "0.1.0"
authors = ["David-Thureson <David.G.Thureson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
array2d = "0.2.1"
itertools = "0.9.0"
bit-vec = "0.6.2"
lazy_static = "1.4.0"
derivative = "2.1.1"

[dev-dependencies]
# criterion = { version = '0.3', features=['real_blackbox'] }
criterion = '0.3'

[[bench]]
name = "build_benchmark"
harness = false

